--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "isomorphic-fetch": "^2.2.1",
     "lodash.zipobject": "^4.1.3",
     "reconnecting-websocket": "^4.2.0",
-    "ws": "^7.2.0"
+    "ws": "^7.2.0",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.4",
